add WorldHost integration (1.21.1, 1.21.3)